crates/core/tests/compile_fail/union_type.stderr
error: Seam does not support unions
 --> tests/compile_fail/union_type.rs:4:7
  |
4 | union Bad {
  |       ^^^
